force-app/main/default/objects/Outcome_Milestone__c/Outcome_Milestone__c.object-meta.xml
<CustomObject>
    <description>Workbook-defined outcome milestone records.</description>
    <label>Outcome Milestone</label>
    <nameField>
        <displayFormat>OUT-{000000}</displayFormat>
        <label>Outcome Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcome Milestones</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>