force-app/main/default/objects/Outcome_Milestone__c/fields/Baseline_HbA1c__c.field-meta.xml
<CustomField>
    <fullName>Baseline_HbA1c__c</fullName>
    <label>Values</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>