force-app/main/default/objects/Outcome_Milestone__c/fields/Baseline_Observation__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Observation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Baseline Observation</label>
    <referenceTo>Clinical_Observation__c</referenceTo>
    <relationshipLabel>Baseline Outcome Milestones</relationshipLabel>
    <relationshipName>Baseline_Observation</relationshipName>
    <type>Lookup</type>
</CustomField>