force-app/main/default/objects/Outcome_Milestone__c/fields/Card_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Card_Sent_At__c</fullName>
    <label>Validation &amp; sharing</label>
    <type>DateTime</type>
</CustomField>