force-app/main/default/objects/Outcome_Milestone__c/fields/Care_Journey__c.field-meta.xml
<CustomField>
    <fullName>Care_Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journey</label>
    <referenceTo>Care_Journey__c</referenceTo>
    <relationshipLabel>Journey Records</relationshipLabel>
    <relationshipName>OutcomeMilestoneCareJourney</relationshipName>
    <type>Lookup</type>
</CustomField>