force-app/main/default/objects/Outcome_Milestone__c/fields/Day90_Observation__c.field-meta.xml
<CustomField>
    <fullName>Day90_Observation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Day 90 Observation</label>
    <referenceTo>Clinical_Observation__c</referenceTo>
    <relationshipLabel>Day 90 Outcome Milestones</relationshipLabel>
    <relationshipName>Day90_Observation</relationshipName>
    <type>Lookup</type>
</CustomField>