force-app/main/default/objects/Outcome_Milestone__c/fields/Doctor_Validated__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Validated__c</fullName>
    <label>Validation &amp; sharing</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>