force-app/main/default/objects/Outcome_Milestone__c/fields/HbA1c_Change__c.field-meta.xml
<CustomField>
    <fullName>HbA1c_Change__c</fullName>
    <label>Values</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>