force-app/main/default/objects/Outcome_Milestone__c/fields/Medication_Change__c.field-meta.xml
<CustomField>
    <fullName>Medication_Change__c</fullName>
    <label>Validation &amp; sharing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reduced</fullName>
            </value>
            <value>
                <fullName>Same</fullName>
            </value>
            <value>
                <fullName>Increased</fullName>
            </value>
            <value>
                <fullName>Not reported</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>