force-app/main/default/objects/Outcome_Milestone__c/fields/Share_Consent__c.field-meta.xml
<CustomField>
    <fullName>Share_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation &amp; sharing</label>
    <type>Checkbox</type>
</CustomField>