force-app/main/default/objects/Outcome_Milestone__c/fields/Validated_By__c.field-meta.xml
<CustomField>
    <fullName>Validated_By__c</fullName>
    <label>Validation &amp; sharing</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Validation &amp; sharing Records</relationshipLabel>
    <relationshipName>Validated_By</relationshipName>
    <type>Lookup</type>
</CustomField>