force-app/main/default/objects/Outcome_Milestone__c/OUT_Validate_Before_Share.validationRule-meta.xml
<ValidationRule>
    <fullName>OUT_Validate_Before_Share</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Card_Sent_At__c)) &amp;&amp; (NOT(Doctor_Validated__c) || NOT(Share_Consent__c))</errorConditionFormula>
    <errorMessage>Outcome cards need doctor validation and patient consent.</errorMessage>
</ValidationRule>